寻找伊甸园

--- a/_posts/2019-01-16-exercise.markdown
+++ b/_posts/2019-01-16-exercise.markdown
@@ -10,7 +10,7 @@ image-sm: https://picsum.photos/500/300?image=1082
 ---
 最近在努力尝试相信自己。相信自己不会放任自己搞砸生活，相信自己不会让自己一直消磨时间下去，相信自己不会甘于接受馊掉的精神食物。同时，也不再严格要求自己必须要完成待办清单，而是问一问自己内心的孩子想不想学点东西？
 
-如此一来，自我责备的次数会少很多，对生活的幸福感也上升了很多。最大的改变就是我的食欲减少了很多，我不再需要食物来补偿自己了，因为我已经对生活感到满足。
+如此一来，自我责备的次数会少很多，对生活的幸福感也上升了很多。最大的改变就是<!--break-->我的食欲减少了很多，我不再需要食物来补偿自己了，因为我已经对生活感到满足。
 
 我敢于作出以上的实验是因为一个问题：
 
